globalize some classes

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -747,3 +747,26 @@ $directory-block-title-size-mobile = rem(12px)
 $directory-block-title-size-desktop = rem(18.61px)
 
 
+// ------------------------------------------------------
+// ------ STAFF DIRECTORY -- PROFILE
+
+$directory-profile-image-block-shadow = $global-block-box-shadow
+$directory-profile-image-size-mobile = rem(200px)
+$directory-profile-image-size-desktop = $directory-block-image-size-mobile
+
+$directory-profile-name-color = $navy
+$directory-profile-name-size-mobile = rem(40px)
+$directory-profile-name-size-desktop = rem(36px)
+
+$directory-profile-title-font = $serif
+$directory-profile-title-style = italic
+$directory-profile-title-color = $light-blue
+$directory-profile-title-size-mobile = $directory-profile-name-size-mobile
+$directory-profile-title-size-desktop = $directory-profile-name-size-desktop
+
+$directory-profile-department-title-color = $navy
+$directory-profile-department-title-font = $sans-serif-headline
+$directory-profile-department-title-size-mobile = rem(14px)
+$directory-profile-department-title-size-desktop = rem(14px)
+$directory-profile-department-title-transform = uppercase
+
