--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -13,16 +13,8 @@
       lost-offset: 2/36
 
 
-
-
-.transition
+.directory-transition
   transition: all 0.25s ease-out
-.flipIn
-  animation: flipdown 0.5s ease both
-.no-select
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
-  -webkit-touch-callout: none
-  user-select: none
 
 
 .staff-department
@@ -55,7 +47,7 @@
       visibility hidden
     &:before , &:after
       content: ""
-      @extend .transition
+      @extend .directory-transition
       position: absolute
       background-color: $directory-department-title-toggle-color
       width: 4px
@@ -158,7 +150,7 @@
             height: $directory-department-title-controls-size-desktop
           &:before , &:after
             content: ""
-            @extend .transition
+            @extend .directory-transition
             position: absolute
             background-color: $directory-department-title-controls-color
           &:before
@@ -201,7 +193,7 @@
   h2 > span.controls
   h2 > span.controls > p
   ul
-    @extend .transition
+    @extend .directory-transition
     margin-top 0
     max-height 0
     opacity 0
@@ -288,19 +280,3 @@
             font-size $directory-block-title-size-desktop
 
 
-@keyframes flipdown
-  0%
-    opacity: 0
-    transform-origin: top center
-    transform: rotateX(-90deg)
-  5%
-    opacity: 1
-  80%
-    transform: rotateX(8deg)
-  83%
-    transform: rotateX(6deg)
-  92%
-    transform: rotateX(-3deg)
-  100%
-    transform-origin: top center
-    transform: rotateX(0deg)
