--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -224,9 +224,14 @@
     li
       padding 0
       margin 0 0 rem(9.5px) 0
-      +above(m)
-        lost-column 1/4 4
+      +above(sm)
         margin-bottom rem(30px)
+      +between(sm, m)
+        lost-column 1/2 2
+      +between(m, l)
+        lost-column 1/3 3
+      +above(l)
+        lost-column 1/4 4
 
       a
         box-shadow $directory-block-shadow
@@ -244,7 +249,8 @@
           padding rem(60px) rem(10px) rem(57.5px)
           text-align center
 
-        figure
+        > picture
+          display block
           margin 0
           position absolute
           left 0
@@ -279,4 +285,84 @@
           +above(m)
             font-size $directory-block-title-size-desktop
 
+#staff-profile
+  color $navy
+  line-height 1.3
+  padding rem(38px) rem(30px) 0
+  text-align center
+  +above(m)
+    padding-left 0
+    padding-right 0
 
+  +between(m, l)
+    max-width (2/3 * 100)%
+    margin 0 auto
+
+  +above(l)
+    max-width 50%
+    margin 0 auto
+
+  a
+    color $navy
+    text-decoration none
+
+  h1
+    color $directory-profile-name-color
+    font-size $directory-profile-name-size-mobile
+    margin 0
+    +above(m)
+      font-size $directory-profile-name-size-desktop
+
+  h2
+    color $directory-profile-title-color
+    font-family $directory-profile-title-font
+    font-size $directory-profile-title-size-mobile
+    font-style $directory-profile-title-style
+    margin 0
+    +above(m)
+      font-size $directory-profile-title-size-desktop
+
+  h4
+    color $directory-profile-department-title-color
+    font-family $directory-profile-department-title-font
+    font-size $directory-profile-department-title-size-mobile
+    margin rem(22px) 0 0
+    text-transform $directory-profile-department-title-transform
+    +above(m)
+      font-size $directory-profile-department-title-size-desktop
+
+  > picture
+    display block
+    margin 0 auto rem(55.5px)
+    width $directory-profile-image-size-mobile
+    +above(m)
+      $directory-profile-image-size-desktop
+
+    box-shadow $directory-profile-image-block-shadow
+    position: relative
+    height: auto
+    line-height: 0
+    border 10px solid $white
+    &, img
+      border-radius 50%
+
+  #staff-profile--address-data
+    margin-top rem(33px)
+    +above(m)
+      lost-flex-container: row
+      > div
+        lost-column 1/2
+
+      #staff-profile--address
+        text-align right
+      #staff-profile--phone-other
+        text-align left
+
+    p
+      margin 0
+  > p
+    margin rem(55px) 0
+    text-align left
+    +above(m)
+      margin-right rem(100px)
+      margin-left rem(100px)
