started directory contact modal

--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -51,3 +51,8 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_block-location'
 
 @import './site/*'
+
+
+// Hide the honeypot
+input#swampFox
+  display none
