--- a/templates/singles/directory/_form.twig
+++ b/templates/singles/directory/_form.twig
@@ -24,41 +24,46 @@
         <legend>Send a message to {{ department.title }}</legend>
 
         <div>
-          <label for="from-name">Your Name</label></h3>
-          <input id="from-name" type="text" name="fromName" value="{{ message.fromName ?? '' }}">
+          <label for="department--{{ department.slug }}--form-from-name">Your Name</label></h3>
+          <input id="department--{{ department.slug }}--form-from-name" type="text" name="fromName" value="{{ message.fromName ?? '' }}">
           {{ message is defined and message ? errorList(message.getErrors('fromName')) }}
         </div>
 
         <div>
-          <label for="from-email">Your Email</label></h3>
-          <input id="from-email" type="email" name="fromEmail" value="{{ message.fromEmail ?? '' }}">
+          <label for="department--{{ department.slug }}--form-from-email">Your Email</label></h3>
+          <input id="department--{{ department.slug }}--form-from-email" type="email" name="fromEmail" value="{{ message.fromEmail ?? '' }}">
           {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
         </div>
 
         <div>
-          <label for="subject">Subject</label></h3>
-          <input id="subject" type="text" name="subject" value="{{ message.subject ?? '' }}">
+          <label for="department--{{ department.slug }}--form-subject">Subject</label></h3>
+          <input id="department--{{ department.slug }}--form-subject" type="text" name="subject" value="{{ message.subject ?? '' }}">
           {{ message is defined and message ? errorList(message.getErrors('subject')) }}
         </div>
 
         <div>
-          <label for="phone">Your phone number</label></h3>
-          <input id="phone" type="tel" name="message[Phone]" value="">
+          <label for="department--{{ department.slug }}--form-phone">Your phone number</label></h3>
+          <input id="department--{{ department.slug }}--form-phone" type="tel" name="message[Phone]" value="">
         </div>
 
         <div>
-          <label for="message[body]">Message</label>
-          <textarea rows="10" cols="40" id="message" name="message[body]">{{ message.message ?? '' }}</textarea>
+          <label for="department--{{ department.slug }}--form-message">Message</label>
+          <textarea rows="10" cols="40" id="department--{{ department.slug }}--form-message" name="message[body]">{{ message.message ?? '' }}</textarea>
           {{ message is defined and message ? errorList(message.getErrors('message')) }}
         </div>
 
-        <div class="center">
-          <input type="submit" id="submit" value="Send Message">
+        <div class="form-group">
+          <div class="form-input">
+            <input type="submit" id="department--{{ department.slug }}--form-submit" value="Send Message">
+          </div>
+          <div class="form-input">
+            <div id="department--{{ department.slug }}--thanks" class="thank-you-message center">
+              <p>Thank you for your message!</p>
+            </div>
+          </div>
         </div>
 
-        <div id="department--{{ department.slug }}--thanks" class="thank-you-message center">
-          <p>Thank you for your message!</p>
-        </div>
+
 
       </fieldset>
   </form>
@@ -71,6 +76,10 @@ $('#department--{{ department.slug }}--form').submit(function(ev) {
   // Prevent the form from actually submitting
   ev.preventDefault();
 
+
+  {# disable stuff, give feedback to UI #}
+  $('#department--{{ department.slug }}--form-submit').prop('disabled', true).val('Sending...');
+
   // Send it to the server
   $.ajax('/', {
     dataType: 'json',
@@ -79,6 +88,11 @@ $('#department--{{ department.slug }}--form').submit(function(ev) {
     success: function(response) {
       if (response.success) {
         $('#department--{{ department.slug }}--thanks').fadeIn();
+
+        {# reset form #}
+        $('#department--{{ department.slug }}--form-submit').prop('disabled', false);
+        $('#department--{{ department.slug }}--form-submit').val('Send Message');
+        $(this)[0].reset();
       } else {
         // response.error will be an object containing any validation errors that occurred, indexed by field name
         // e.g. response.error.fromName => ['From Name is required']
