--- a/templates/modules/content/_block-home-featured-video.twig
+++ b/templates/modules/content/_block-home-featured-video.twig
@@ -6,21 +6,18 @@
 
       {%- import "macros/_images" as imageFunctions -%}
       {% set image = videoBlock.backgroundImage.one() %}
-      {% set outputWidths = [480, 640, 1024, 1600] %}
-      {%- set initialQuality = 20 -%}
+      {% set outputWidths = [480, 736, 980, 1280, 1690] %}
+      {%- set lowQuality = 20 -%}
       {%- set mobileAspectRatio = (16/15) -%}
-      {%- set mobileSmall = { width: 40, height: 40 / mobileAspectRatio, quality: initialQuality } -%}
-      {%- set mobileMedium = { width: 100, height: 100 / mobileAspectRatio, quality: initialQuality } -%}
+      {%- set mobileSmall = { width: 40, height: 40 / mobileAspectRatio, quality: lowQuality } -%}
 
       {%- set desktopAspectRatio = (12/5) -%}
-      {%- set desktopSmall = { width: 40, height: 40 / desktopAspectRatio, quality: initialQuality } -%}
-      {%- set desktopMedium = { width: 100, height: 100 / desktopAspectRatio, quality: initialQuality } -%}
+      {%- set desktopSmall = { width: 40, height: 40 / desktopAspectRatio, quality: lowQuality } -%}
 
       <figure class="mobile">
         <img class="lazyload"
           src="{{ image.getUrl(mobileSmall) }}"
-          data-src="{{ image.getUrl(mobileMedium) }}"
-          data-sizes="auto"
+          data-sizes="100vw"
           data-srcset="{{ imageFunctions.srcset(image, outputWidths, mobileAspectRatio) }}"
           {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
         {% if image.caption %}
@@ -31,8 +28,7 @@
       <figure class="desktop">
         <img class="lazyload"
           src="{{ image.getUrl(desktopSmall) }}"
-          data-src="{{ image.getUrl(desktopMedium) }}"
-          data-sizes="auto"
+          data-sizes="100vw"
           data-srcset="{{ imageFunctions.srcset(image, outputWidths, desktopAspectRatio) }}"
           {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
         {% if image.caption %}
