--- a/templates/modules/content/_block-mayor-welcome.twig
+++ b/templates/modules/content/_block-mayor-welcome.twig
@@ -5,17 +5,16 @@
   {%- import "macros/_images" as imageFunctions -%}
   {%- set image = welcomeBlock.welcomePhoto.one() -%}
   {% set outputWidths = [230, 400, 800] %}
-  {%- set initialQuality = 20 -%}
+  {%- set lowQuality = 20 -%}
+  {%- set highQuality = 82 -%}
 
   {%- set aspectRatio = (1/1) -%}
-  {%- set small = { width: 40, height: 40 / aspectRatio, quality: initialQuality } -%}
-  {%- set medium = { width: 100, height: 100 / aspectRatio, quality: initialQuality } -%}
+  {%- set small = { width: 40, height: 40 / aspectRatio, quality: lowQuality } -%}
 
   <figure>
     <img class="lazyload"
       src="{{ image.getUrl(small) }}"
-      data-src="{{ image.getUrl(medium) }}"
-      data-sizes="auto"
+      data-sizes="100vw"
       data-srcset="{{ imageFunctions.srcset(image, outputWidths, aspectRatio) }}"
       {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
     {% if image.caption %}
