--- a/templates/modules/content/_block-spotlight.twig
+++ b/templates/modules/content/_block-spotlight.twig
@@ -18,21 +18,18 @@
         {%- set image = spotlight.employee.one().staffPhoto.one() -%}
       {% endif %}
 
-      {% set outputWidths = [480, 640, 1024, 1600] %}
-      {%- set initialQuality = 20 -%}
+      {% set outputWidths = [480, 736, 980, 1280, 1690] %}
+      {%- set lowQuality = 20 -%}
 
       {%- set mobileAspectRatio = (15/8) -%}
-      {%- set mobileSmall = { width: 40, height: 40 / mobileAspectRatio, quality: initialQuality } -%}
-      {%- set mobileMedium = { width: 100, height: 100 / mobileAspectRatio, quality: initialQuality } -%}
+      {%- set mobileSmall = { width: 40, height: 40 / mobileAspectRatio, quality: lowQuality } -%}
 
       {%- set desktopAspectRatio = (9/5) -%}
-      {%- set desktopSmall = { width: 40, height: 40 / desktopAspectRatio, quality: initialQuality } -%}
-      {%- set desktopMedium = { width: 100, height: 100 / desktopAspectRatio, quality: initialQuality } -%}
+      {%- set desktopSmall = { width: 40, height: 40 / desktopAspectRatio, quality: lowQuality } -%}
 
         <figure class="mobile">
           <img class="lazyload"
             src="{{ image.getUrl(mobileSmall) }}"
-            data-src="{{ image.getUrl(mobileMedium) }}"
             data-sizes="auto"
             data-srcset="{{ imageFunctions.srcset(image, outputWidths, mobileAspectRatio) }}"
             {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
@@ -44,7 +41,6 @@
         <figure class="desktop">
           <img class="lazyload"
             src="{{ image.getUrl(desktopSmall) }}"
-            data-src="{{ image.getUrl(desktopMedium) }}"
             data-sizes="auto"
             data-srcset="{{ imageFunctions.srcset(image, outputWidths, desktopAspectRatio) }}"
             {% if image.alt %}alt="{{ image.alt }}"{% endif %}>
