fix conditional bug

--- a/templates/modules/content/_block-quick-links.twig
+++ b/templates/modules/content/_block-quick-links.twig
@@ -1,4 +1,4 @@
-{% if entry.quickLinks %}
+{% if entry.quickLinks.count() %}
 <div id="block--quick-links">
   <h3>Quick Links</h3>
   {% include "modules/content/_quick-links" %}
