directory layout tweak

--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -190,6 +190,7 @@
         text-transform $directory-department-description-transform
         +above(m)
           font-size $directory-department-description-size-desktop = rem(18px)
+          padding-right 35vw
 
 
   h2 > span.controls
