directory profile bio top border

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -770,3 +770,5 @@ $directory-profile-department-title-size-mobile = rem(14px)
 $directory-profile-department-title-size-desktop = rem(14px)
 $directory-profile-department-title-transform = uppercase
 
+$directory-profile-bio-top-border-width = $border-width-base
+$directory-profile-bio-top-border-color = $gray94
