--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -306,7 +306,7 @@
 
 #staff-profile
   color $navy
-  line-height 1.3
+  line-height $line-height-base
   padding rem(38px) rem(30px) 0
   text-align center
   +above(m)
@@ -380,8 +380,23 @@
     p
       margin 0
   > p
-    margin rem(55px) 0
+    padding rem(66px) 0 rem(55px)
+    position relative
     text-align left
+
+    &:before
+      content: ""
+      position: absolute
+      left: 0
+      top: rem(33px)
+      height: $directory-profile-bio-top-border-width
+      width: 100%
+      border-bottom: $directory-profile-bio-top-border-width solid $directory-profile-bio-top-border-color
+
     +above(m)
       margin-right rem(100px)
       margin-left rem(100px)
+
+      &:before
+        left: 7.5%
+        width: 85%
