article tweaks, share sheet, related entries

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -584,6 +584,28 @@ $module-news-events-home-title-size-desktop = rem(21px)
 
 // ------------------------------------------------------
 // ------ BLOCK
+// ------ NEWS & EVENTS PREVIEWS
+
+$module-news-events-preview-box-shadow = $global-block-box-shadow
+$module-news-events-preview-box-shadow-hover = $global-block-box-shadow-hover
+$module-news-events-preview-background-color = $white
+
+$module-news-events-preview-name-font = $sans-serif-headline
+$module-news-events-preview-name-transform = uppercase
+$module-news-events-preview-name-color = $navy
+$module-news-events-preview-name-size-mobile = rem(21px)
+$module-news-events-preview-name-size-desktop = rem(28px)
+
+$module-news-events-preview-title-font = $serif
+$module-news-events-preview-title-style = italic
+$module-news-events-preview-title-color = $light-blue
+$module-news-events-preview-title-arrow-color = $light-blue
+$module-news-events-preview-title-size-mobile = rem(18px)
+$module-news-events-preview-title-size-desktop = rem(24px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
 // ------ VIDEO FEATURE
 $module-video-feature-background-color = $black
 
@@ -772,3 +794,15 @@ $directory-profile-department-title-transform = uppercase
 
 $directory-profile-bio-top-border-width = $border-width-base
 $directory-profile-bio-top-border-color = $gray94
+
+
+// ------------------------------------------------------
+// ------ ARTICLE DETAIL
+
+$article-related-block-top-border-width = $border-width-base
+$article-related-block-top-border-color = $gray94
+$article-related-block-title-color = $navy
+$article-related-block-title-size-mobile = rem(36px)
+$article-related-block-title-size-desktop = rem(40px)
+
+
