--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -16,6 +16,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 
 // Plugins
 @import '@fancyapps/fancybox/dist/jquery.fancybox.css'
+@import 'responsive-social-buttons/dist/social-buttons.css'
 
 @import './inc/_box-sizing'
 @import './inc/_touch-action'
@@ -43,6 +44,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_content-files'
 @import './modules/_block-mayor-welcome'
 @import './modules/_block-spotlight'
+@import './modules/_block-news-events-preview'
 @import './modules/_block-process'
 @import './modules/_block-weather-tip'
 @import './modules/_block-news-events-home'
