--- a/templates/layouts/columns/_two_parallax.twig
+++ b/templates/layouts/columns/_two_parallax.twig
@@ -22,6 +22,8 @@
     <aside>
       {% block aside %}{% endblock %}
     </aside>
+
+    {% block bottomWide %}{% endblock %}
   </div>
 
 {% endblock %}
