--- a/templates/structure/news-events/_entry.twig
+++ b/templates/structure/news-events/_entry.twig
@@ -30,3 +30,40 @@
 {% block aside %}
   {% include "modules/content/_block-quick-links" %}
 {% endblock %}
+
+{# Bottom of page - full width column #}
+{% block bottomWide %}
+
+{# {% set relatedEntries = craft.entries({
+  section: 'newsEvents',
+  relatedTo: ['or', {
+      targetElement: entry.storyType.ids(),
+      field: 'storyType'
+  }, {
+      targetElement: entry.newsEventsTags.ids(),
+      field: 'newsEventsTags'
+  }],
+  id: 'not ' ~ entry.id,
+  limit: 3
+}) %} #}
+{% set relatedEntries = craft.entries({
+  section: 'newsEvents',
+  relatedTo: ['or', {
+      targetElement: entry.newsEventsTags.ids(),
+      field: 'newsEventsTags'
+  }],
+  id: 'not ' ~ entry.id,
+  limit: 3
+}) %}
+{% if relatedEntries.count() %}
+<section id="news-events-article-related">
+  <h2>Related Posts</h2>
+  <ul>
+  {% for entry in relatedEntries %}
+    <li>{% include "modules/content/_block-news-events-entry" %}</li>
+  {% endfor %}
+  </ul>
+</section>
+{% endif %}
+
+{% endblock %}
