--- a/templates/structure/news-events/_types/_article.twig
+++ b/templates/structure/news-events/_types/_article.twig
@@ -1,8 +1,11 @@
 <header>
   <p class="meta">News Article</p>
-  <h1>{{ entry.title }}</h1>
-  <p class="meta">News Article</p>
-  <p class="lead">{{ entry.leadIn }}</p>
+  <h1>
+    {{ entry.title }}
+    {% include "structure/news-events/_block-share" %}
+  </h1>
+  <p class="meta">{{ entry.postDate|date('M j, Y') }}&nbsp;&nbsp;|&nbsp;&nbsp;{{ entry.author }}&nbsp;&nbsp;|&nbsp;&nbsp;META</p>
+  {% if entry.leadIn %}<p class="lead">{{ entry.leadIn }}</p>{% endif %}
 </header>
 
 {% include "modules/content/_page-content" %}
