list layout fix

--- a/src/styles/site/_layout-list.styl
+++ b/src/styles/site/_layout-list.styl
@@ -104,6 +104,10 @@
             align-items: center
             justify-content: space-between
 
+            a
+              flex 0 0 47.5%
+              min-width auto
+
       a
         button()
         font-size rem(9.875px)
@@ -112,9 +116,7 @@
         min-width rem(155px)
 
         +above(l)
-          flex 0 0 47.5%
           margin-left: auto
-          min-width auto
 
 
 
