--- a/templates/singles/directory/_member.twig
+++ b/templates/singles/directory/_member.twig
@@ -1,7 +1,7 @@
 {% set memberName = member.personName|trim|replace({'  ': ' '}) %}
 <li id="staff-member-{{ member.id }}">
   <a href="{{ member.url }}" title="View contact details for {{ memberName }}">
-    {% if member.staffPhoto.count() %}
+    {% if member.staffPhoto | length %}
       {%- set thumb = { width: 40, height: 40, quality: 20 } -%}
       <picture>
         <sources data-srcset="{{ member.staffPhoto.one().optimizedImagesSquare.srcsetWebP() }}"
