--- a/templates/structure/staff/_entry.twig
+++ b/templates/structure/staff/_entry.twig
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  {% if entry.bio %}<p>{{ entry.bio }}</p>{% endif %}
+  {% if entry.bio %}<p>{{ entry.bio |typogrify }}</p>{% endif %}
 
 </section>
 
